network-policy-task/ingress-policy-dbpod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysqldb-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: springboot-k8s-mysql
    ports:
    - protocol: TCP
      port: 3306
